--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="styles.css">
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/q/q.js"></script>
+<!-- <script src="bower_components/q/q.js"></script> -->
 <script src="siesta.js"></script>
 <script src="scripts.js"></script>
